feat: CodeTable related added to main's route
1. add route to main
2. add swagger comment to presentation layer
3. modify CodeTable, CodeValue's model
4. modify swagger document
5. add admin require middleware
