# backend/docs/swagger.json
@@ -87,6 +87,224 @@
                 }
             }
         },
+        "/code/type": {
+            "put": {
+                "description": "Update a code type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Update a code type",
+                "parameters": [
+                    {
+                        "description": "CodeType",
+                        "name": "codeType",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presentations.UpdateCodeTypeParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CodeType"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new code type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Create a new code type",
+                "parameters": [
+                    {
+                        "description": "CodeType",
+                        "name": "codeType",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presentations.CreateCodeTypeParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CodeType"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a code type",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Delete a code type",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "CodeType ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/code/type/getAllCodeTypes": {
+            "get": {
+                "description": "Get all code types",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Get all code types",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.CodeType"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/code/value": {
+            "put": {
+                "description": "Update a code value",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Update a code value",
+                "parameters": [
+                    {
+                        "description": "CodeValue",
+                        "name": "codeValue",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presentations.UpdateCodeValueParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CodeValue"
+                        }
+                    }
+                }
+            },
+            "post": {
+                "description": "Create a new code value",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Create a new code value",
+                "parameters": [
+                    {
+                        "description": "CodeValue",
+                        "name": "codeValue",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/presentations.CreateCodeValueParam"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.CodeValue"
+                        }
+                    }
+                }
+            },
+            "delete": {
+                "description": "Delete a code value",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "code"
+                ],
+                "summary": "Delete a code value",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "CodeValue ID",
+                        "name": "id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user": {
             "put": {
                 "description": "Update user",
@@ -155,6 +373,43 @@
         }
     },
     "definitions": {
+        "models.CodeType": {
+            "type": "object",
+            "properties": {
+                "code_values": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.CodeValue"
+                    }
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "type_desc": {
+                    "type": "string"
+                },
+                "type_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CodeValue": {
+            "type": "object",
+            "properties": {
+                "code_type_id": {
+                    "type": "integer"
+                },
+                "code_value": {
+                    "type": "string"
+                },
+                "code_value_desc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                }
+            }
+        },
         "models.User": {
             "type": "object",
             "properties": {
@@ -177,6 +432,40 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "presentations.CreateCodeTypeParam": {
+            "type": "object",
+            "required": [
+                "typeDesc",
+                "typeName"
+            ],
+            "properties": {
+                "typeDesc": {
+                    "type": "string"
+                },
+                "typeName": {
+                    "type": "string"
+                }
+            }
+        },
+        "presentations.CreateCodeValueParam": {
+            "type": "object",
+            "required": [
+                "codeTypeID",
+                "codeValue",
+                "codeValueDesc"
+            ],
+            "properties": {
+                "codeTypeID": {
+                    "type": "integer"
+                },
+                "codeValue": {
+                    "type": "string"
+                },
+                "codeValueDesc": {
                     "type": "string"
                 }
             }
@@ -247,6 +536,48 @@
                 },
                 "status": {
                     "type": "string"
+                }
+            }
+        },
+        "presentations.UpdateCodeTypeParam": {
+            "type": "object",
+            "required": [
+                "id",
+                "typeDesc",
+                "typeName"
+            ],
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "typeDesc": {
+                    "type": "string"
+                },
+                "typeName": {
+                    "type": "string"
+                }
+            }
+        },
+        "presentations.UpdateCodeValueParam": {
+            "type": "object",
+            "required": [
+                "codeTypeID",
+                "codeValue",
+                "codeValueDesc",
+                "id"
+            ],
+            "properties": {
+                "codeTypeID": {
+                    "type": "integer"
+                },
+                "codeValue": {
+                    "type": "string"
+                },
+                "codeValueDesc": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
                 }
             }
         },
